# Discounted-Udemy-Course-Enroller

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUCE-CLI-windows.spec  LICENSE  README.md  base.py  cli.py  colors.py  config.json  default-duce-cli-settings.json  default-duce-gui-settings.json  duce-cli-settings.json  duce-gui-settings.json  duce-settings.json  gui.py  images.py  index.html  old_cli.py  problem.txt  pyproject.toml  requirements.txt  settings.json  test.txt  test2.py  udemy.py  version.txt
.github/: no-response.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-form.yml  bug_report.md  config.yml  feature_request.md  feature_request.yml  title.md
.github/workflows/: build.yml  close-pr.yml  del-old.yml  stale.yml  test.yml
CLI/: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  colors.py  duce-cli-settings.json  duce.py  requirements.txt
CLI/.github/workflows/: build.yml
COLAB/: DUCE.ipynb  README.md  tempCodeRunnerFile.ipynb
Courses/: 2021-08-02--12-37
G-COLAB/: DUCE.ipynb  README.md
GUI/: .gitignore  CHANGELOG.md  README.md  duce-settings.json  duce.py  requirements.txt
GUI/.github/ISSUE_TEMPLATE/: bug_report.md
GUI/pack/: base64.py  browser_cookie3.py
__banner/: banner.py
__colors__/: colors.py
__constants/: constants.py
__functions/: functions.py
assets/: bootstrap-5.0.0-alpha.min.css  main.css  main.js
banner/: banner.py
browser_cookie3o/: __init__.py
colors/: colors.py
functions/: functions.py
gh-pages/duce/: index.html
gh-pages/duce/assets/: main.css
gh-pages/duce/support/: README.md  index.html  sidebar.md
gh-pages/duce/support/pages/: cookie-login.md  get-started.md  login.md  python-code.md  windows.md
pack/: base64.py  constants.py  functions.py
support/: README.md  index.html  sidebar.md
support/pages/: auto-login.md  faq.md  get-started.md  login.md  manual-login.md  problems.md  python-code.md  windows.md
test/: gui.py  test.json
tests/: conftest.py  test_validation.py
